resources/css/style2.css
html{
  font-family: "Raleway"; "Helvetica", sans-serif;
  font-size: 16px;
}

body {
  line-height: 1.4;
  /*max-width: 1600px;*/
  color: hsl(0, 0%, 35%);
  margin: 0 auto;
}

h1 {
  font-weight:800;
  color: hsl(0, 0%, 25%);
}
.container {
  display: flex;
  padding: 1.5rem 1.5rem;

}

.wide-box {
  width: 60%;
  display: flex;
  flex-direction: column;
}

.narrow-box {
  display: flex;
  flex-direction: column;
  width: 40%;
}

.mini-box {
  display: flex;
  align-items: flex-start;
  padding-bottom: 0.5rem;
  margin 0 0 0.5rem 1rem;

}
.mini-box img {
  width: 35%;
  height: auto;
  padding-left: 1rem;
  padding-bottom: 1rem;
}
.mini-box-text {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  color: rgb(105, 105, 105);
  padding-left: 1.5rem;
  width: 65%;
}

.mini-box-text a {
  color: rgb(30,144,255);
  text-decoration: none;
}

/* Header */
header {
  margin: 0 2rem;
}
header img{
  padding-right: .2rem;
  height: 3rem;

}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  height: 4rem;
  font-family: "Ubuntu"; "Helvetica", sans-serif;
}
nav .logo-name {
  display: flex;
  align-items: center;
}

header h4 {
  font-size: 2rem;
  text-transform: uppercase;
}

header h4 .firstword {
  color: hsl(0, 0%, 25%);
}

header h4 .secondword {
  color: hsl(0, 0%, 45%);
}

nav ul {
  margin-right: 1.5rem;
}

ul li {
  display: inline;
  padding: 0 1rem;
  color: hsl(0, 0%, 45%);
}

/* Banner */
.banner {
  display: flex;
  background-color: hsl(0, 0%, 75%);
}

.banner img {
  max-width: 100%;
  height: auto;
  display: block;
  overflow: hidden;
  padding: 2rem 1.5rem;
}

.banner-text {
  width: 40%;
  padding: 2rem 1.5rem;
  margin: auto 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: hsl(0, 0%, 35%);
  font-family: "Raleway", "Helvetica", sans-serif;
}

.banner-text h1 {
    color: hsl(0, 0%, 25%);
  }


/* Info Box */
.info-box {
  display: flex;
}

.info-box .wide-box img {
  max-width: 100%;
  height: auto;
  display: block;
}

/*  Courses */
.course-box h1 {
  text-align: center;
}
.course-box {
  display: inline-block;
  background-color: rgb(220, 220, 220);

  color: rgb(105, 105, 105);
}

.course-array {
  display: inline-flex;
  flex-flow: row wrap;
  justify-content: center;
  margin-left: 4.5rem;
  margin-right: 4.5rem;
}

.course {
  background-color: white;
  margin-right: 1rem;
  margin-bottom: 2rem;
  width: 300px;
}

.course-text {
  padding-left: 1rem;
  text-align: left;
}

.course-text #course-title {
  padding: 0.5rem 0;
}

.course-text #classes {
  font-weight: 300;
  flex-direction: column;
  align-items: flex-start;
}
.course img {
  width: 300px;
}

/*Thesis Exhibit section  */
.thesis-box {
  display: inline-block;
  color: rgb(105, 105, 105);
}

.thesis-box h1{
  text-align: center;
}
.thesis-inner-box {
  display: flex;
  align-items: flex-start;
}

.thesis-box .wide-box video {
  max-width: 100%;
  height: auto;
  display: block;
}

/* Footer */
footer p {
  display: inline;
  padding: 0 1rem;
  color: rgb(105, 105, 105);
}

